# xfce4-terminal

./: .clang-format  .cppcheck-false-positives  .cppcheck.cfg  .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  Terminal-default-apps.xml.in  Terminal-default-apps.xml.in.in  Terminal-toolbars.ui  Terminal.1  Terminal.desktop  Terminal.desktop.in  Terminal.desktop.in.in  Terminal.glade  Terminal.mime.xml  Terminal.spec.in  Terminal.ui  TerminalHelp.in  aclocal.m4  autogen.sh  confdefs.h  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  conftest.foo  linux.tcpalette  ltmain.sh  meson.build  meson_options.txt  module.xml  (+6 more)
colorschemes/: Makefile.am  SUSE-xterm.theme.in  black-on-white.theme.in  dark-pastels.scheme.in  dark-pastels.theme.in  green-on-black.scheme.in  green-on-black.theme.in  meson.build  solarized-dark.scheme.in  solarized-dark.theme.in  solarized-light.desktop.in  solarized-light.theme.in  tango.theme.in  white-on-black.desktop.in  white-on-black.scheme.in  white-on-black.theme.in  xterm.scheme.in  xterm.theme.in
debian/: Terminal.1  Terminal.wrapper  changelog  control  copyright  menu  postinst  prerm  rules
doc/: Makefile.am  Makefile.in  README  Terminal.1.xml  Terminal.xml  meson.build  terminal-nochunk.xsl  terminal.css  terminal.xsl  xfce4-terminal-man.xsl  xfce4-terminal.1.xml  xfce4-terminal.xml
doc/C/: Makefile.am  Makefile.in  Terminal.html  Terminal.xml  Terminal.xml.in  advanced.html  copyright.html  faq.html  getting-started.html  index.html  preferences.html  support.html  usage.html
doc/C/images/: Makefile.am  Makefile.in
doc/da/: Makefile.am  Terminal.xml.in
doc/da/images/: Makefile.am
doc/fr/: Makefile.am  Terminal.xml.in
doc/fr/images/: Makefile.am
doc/gl/: Makefile.am  Terminal.xml.in
doc/gl/images/: Makefile.am
doc/id/: Makefile.am  Terminal.xml.in
doc/id/images/: Makefile  Makefile.am  Makefile.in
doc/images/: Makefile.am
doc/images/ja/: Makefile.am
doc/ja/: Makefile.am  Terminal.xml.in
doc/ja/images/: Makefile.am
doc/po/: Makefile.am  Terminal.pot  ar.po  ca.po  da.po  de.po  el.po  es.po  fr.po  gl.po  hr.po  id.po  it.po  ja.po  ko.po  lt.po  pl.po  pt.po  pt_BR.po  ru.po  sr.po  sv.po  tr.po  ug.po  uk.po  xfce4-terminal.pot  zh_CN.po
helpers/: Makefile.am  balsa.desktop.in  epiphany.desktop.in  evolution.desktop.in  exo-open-browser.desktop.in  exo-open-mailer.desktop.in  firefox.desktop.in  galeon.desktop.in  kmail.desktop.in  konqueror.desktop.in  lynx.desktop.in  mozilla-browser.desktop.in  mozilla-mailer.desktop.in  mutt.desktop.in  opera-browser.desktop.in  opera-mailer.desktop.in  sensible-browser.desktop.in  sylpheed-claws.desktop.in  thunderbird.desktop.in
icons/: Makefile.am  Makefile.in  meson.build  terminal.xpm
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am  Makefile.in
icons/64x64/: Makefile.am
icons/96x96/: Makefile.am
icons/scalable/: Makefile.am  Makefile.in
m4/: X11.m4  debug.m4  depends.m4  i18n.m4
pixmaps/: Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  POTFILES.skip  Terminal.pot  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.gmo  de.po  dz.po  el.po  en_AU.po  en_GB.gmo  en_GB.po  eo.po  es.gmo  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.gmo  fr.po  gl.po  he.gmo  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  (+41 more)
po-doc/: ChangeLog  LINGUAS  Makefile.am  Terminal.pot  ast.po  ca.po  da.po  fr.po  gl.po  id.po  it.po  ja.po  zh_CN.po
po.old/: LINGUAS  Terminal.pot  ca.po  cs.po  es.po  eu.po  fi.po  gl.po  he.po  hu.po  it.po  ja.po  nl.po  pa.po  pl.po  sk.po  sq.po  uk.po  zh_TW.po
terminal/: Makefile.am  Makefile.in  main.c  meson.build  stock-icons.h  terminal-accel-map.c  terminal-accel-map.h  terminal-app.c  terminal-app.h  terminal-config.h.in  terminal-dbus.c  terminal-dbus.h  terminal-dialogs.c  terminal-dialogs.h  terminal-encoding-action.c  terminal-encoding-action.h  terminal-enum-types.c  terminal-enum-types.h  terminal-gdbus.c  terminal-gdbus.h  terminal-gtk-extensions.c  terminal-gtk-extensions.h  terminal-helper-dialog.c  terminal-helper-dialog.h  terminal-helper.c  terminal-helper.h  terminal-icons.c  terminal-icons.h  terminal-image-loader.c  terminal-image-loader.h  terminal-marshal.list  terminal-monitor.c  terminal-monitor.h  terminal-options.c  terminal-options.h  terminal-preferences-dialog.c  terminal-preferences-dialog.h  terminal-preferences-dropdown-dialog.c  terminal-preferences-dropdown-dialog.h  terminal-preferences-dropdown.glade  (+36 more)
terminal/stock-icons/: Makefile.am  Makefile.in
