pngdir = $(datadir)/icons/hicolor/48x48/apps
png_DATA =								\
	Terminal.png

svgdir = $(datadir)/icons/hicolor/scalable/apps
svg_DATA =								\
	Terminal.svg

pixmapdir = $(datadir)/pixmaps
pixmap_DATA =								\
	terminal.xpm

EXTRA_DIST =								\
	$(png_DATA)							\
	$(svg_DATA)							\
	$(pixmap_DATA)
