apps_pngdir = $(datadir)/icons/hicolor/48x48/apps
apps_png_DATA =								\
	Terminal.png

apps_svgdir = $(datadir)/icons/hicolor/scalable/apps
apps_svg_DATA =								\
	Terminal.svg

pixmapdir = $(datadir)/pixmaps
pixmap_DATA =								\
	terminal.xpm

EXTRA_DIST =								\
	$(apps_png_DATA)						\
	$(apps_svg_DATA)						\
	$(pixmap_DATA)
